--- a/src/index.css
+++ b/src/index.css
@@ -190,6 +190,12 @@ button {
 .m-auto{
   margin: 0 auto;
 }
+.w-100{
+  width: 100%;
+}
+.h-100{
+  height: 100%;
+}
 .today-sel{
   background-image: url('./assets//images/battle/today-btn.png');
 }
