--- a/src/styles/gift.scss
+++ b/src/styles/gift.scss
@@ -1,43 +1,62 @@
 .gift {
-    width: 24vw;
-    height: 26vw;
-    background-image: url(../assets//images/lucky/reward-box.png);
-    background-size: 100% 100%;
-    position: relative;
+  width: 24vw;
+  height: 26vw;
+  background-image: url(../assets//images/lucky/reward-box.png);
+  background-size: 100% 100%;
+  position: relative;
 
-    .gift-img {
-      position: absolute;
-      width: 12vw;
-      top: 7vw;
-      left: 4vw;
-    }
-
-
-    .priceNText{
-      left: 1vw;
-      // border: 1px solid;
-      width: 20vw;
-      position: absolute;
-      font-size: 2.5vw;
-      color: white;
-      top: 24vw;
-      font-family: "PoppinsMedium";
-      .name{
-       font-size: 2.8vw;
-      }
-      .price{
-        .price-text{
-        font-size: 2.5vw;
-        }
-        .bean-img{
-          width: 4vw;
-        }
-
-      }
-
-
-
-    }
-
-
+  .gift-img {
+    position: absolute;
+    width: 12vw;
+    top: 7vw;
+    left: 4vw;
   }
+
+  .priceNText {
+    left: 1vw;
+    // border: 1px solid;
+    width: 20vw;
+    position: absolute;
+    font-size: 2.5vw;
+    color: white;
+    top: 24vw;
+    font-family: "PoppinsMedium";
+    .name {
+      font-size: 2.8vw;
+    }
+    .price {
+      .price-text {
+        font-size: 2.5vw;
+      }
+      .bean-img {
+        width: 4vw;
+      }
+    }
+  }
+}
+
+.game-reward-item {
+  width: 24vw;
+  height: 26vw;
+  background-image: url(../assets//images/lucky/reward-box.png);
+  background-size: 100% 100%;
+  position: relative;
+
+  .reward-img {
+    position: absolute;
+    width: 12vw;
+    top: 7vw;
+    left: 6vw;
+  }
+
+  .text {
+    left: 1vw;
+    // border: 1px solid;
+    width: 20vw;
+    position: absolute;
+    font-size: 2.5vw;
+    color: white;
+    top: 24vw;
+    font-family: "PoppinsMedium";
+  }
+}
