--- a/src/styles/battle-tab.scss
+++ b/src/styles/battle-tab.scss
@@ -79,6 +79,7 @@
     background-size: 100% 100%;
     background-repeat: no-repeat;
     margin: 0 auto;
+    top: 4vw;
 
     .battle-game-points-count {
       background-image: url(../assets/images/battle/game-points-counter-bar.png);
