--- a/src/styles/lucky-player.scss
+++ b/src/styles/lucky-player.scss
@@ -1,7 +1,7 @@
 .lucky-player {
   margin-top: 13vw;
 
-  .player-details-btn{
+  .player-details-btn {
     position: relative;
     top: 16vw;
     z-index: 1;
@@ -78,18 +78,33 @@
       margin: 0 auto;
       top: 44vw;
 
+      .lucky-game-wrap {
+        width: 41vw;
+        height: 31vw;
+        position: absolute;
+        overflow: hidden;
+        top: -15vw;
+        left: 19vw;
+      }
+
       img {
-        display: block;
-        width: 70%;
-        /* height: 36vw; */
-        /* height: auto; */
-        position: relative;
-        left: 12vw;
-        top: 19vw;
+        position: absolute;
+        width: 27vw;
+      }
+
+      .lucky-text {
+        position: absolute;
+        font-size: 8vw;
+        font-family: "PoppinsMediumItalic";
+        color: white;
+        font-weight: bold;
+
+        background-image: linear-gradient(to right, #c98473, #f9e346);
+    -webkit-background-clip: text;
+    color: transparent;
+    display: inline;
       }
     }
-
-
 
     .play-btns {
       display: flex;
@@ -246,7 +261,6 @@
         right: 0;
         margin: 0 auto;
         padding-bottom: 5vw;
-     
 
         .title {
           width: 82%;
@@ -254,38 +268,38 @@
           left: 8vw;
           top: -17vw;
         }
-        p{
-          font-family: 'PoppinsMediumItalic';
+        p {
+          font-family: "PoppinsMediumItalic";
           color: white;
           font-size: 4vw;
         }
-        .mascot-img{
+        .mascot-img {
           width: 30vw;
         }
 
-        .last-lucky-rest-wins{
-         margin-top: 9vw;
-         overflow: hidden;
-         height: 151vw;
+        .last-lucky-rest-wins {
+          margin-top: 9vw;
+          overflow: hidden;
+          height: 151vw;
         }
 
         .last-lucky-rest-wins::-webkit-scrollbar {
           width: 1vw;
           background-color: gray;
         }
-      
+
         /* Track */
         .last-lucky-rest-wins::-webkit-scrollbar-track {
           box-shadow: inset 0 0 5px grey;
           border-radius: 1vw;
         }
-      
+
         /* Handle */
         .last-lucky-rest-wins::-webkit-scrollbar-thumb {
           background: white;
           border-radius: 2vw;
         }
-      
+
         /* Handle on hover */
         .last-lucky-rest-wins::-webkit-scrollbar-thumb:hover {
           background: #b30000;
@@ -318,7 +332,7 @@
     }
   }
 
-  .last-winner-scratched{
+  .last-winner-scratched {
     background-image: url(../assets//images/lucky/last-lucky-winner-bg.png) !important;
   }
 }
