--- a/src/index.css
+++ b/src/index.css
@@ -104,7 +104,7 @@ button {
 .guide{
   background-image: url('./assets/images/battle/guide-btn.png');
 }
-.event-gifting{
+.event-gifting-btn{
   background-image: url('./assets/images/battle/event-gifting-btn.png');
 }
 .playBtn{
@@ -239,7 +239,40 @@ button {
 .talent-tour{
   background-image: url(./assets/images//guide/talent-tour.png)
 }
+.event-gifting{
+  background-image: url(./assets/images//guide/event-gifting.png)
+}
 
 .text-left{
   text-align: left !important;
 }
+
+.golden-text{
+  background: linear-gradient(45deg, #ffd700, #ffaf00);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+
+
+::-webkit-scrollbar {
+    width: 1vw;
+    background-color: gray;
+  }
+
+  /* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 1vw;
+  }
+
+  /* Handle */
+::-webkit-scrollbar-thumb {
+    background: white;
+    border-radius: 2vw;
+  }
+
+  /* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #b30000;
+  }
