--- a/src/styles/accordion.scss
+++ b/src/styles/accordion.scss
@@ -13,7 +13,6 @@
       justify-content: space-between;
       align-items: center;
       height: 16vw;
-    //   background-image: url("../assets/images/guide/lucky-player.png");
       background-size: 100% 100%;
       background-repeat: no-repeat;
       position: relative;
@@ -56,10 +55,10 @@
       display: flex;
 
       height: 40vw;
-      border: 1px solid;
-      background-color: #b39bec;
+      // border: 1px solid;
+      // background-color: #b39bec;
       overflow: auto;
-      border-radius: 0 0 2vw 2vw;
+      // border-radius: 0 0 2vw 2vw;
       width: 100%;
       margin: 0 auto;
       padding-top: 2vw;
@@ -67,8 +66,12 @@
       padding: 6vw 4vw 2vw 4vw;
       position: relative;
       top: 5vw;
-      border: 1vw solid #fef0c4;
-      color: white;
+      // border: 1vw solid #fef0c4;
+      color: black;
+      background-image: url(../assets/images/guide/rectangle-5.png);
+      background-size: 100% 100%;
+      // background-repeat: no-repeat;
+
 
   
 
