--- a/src/styles/custom-radio.scss
+++ b/src/styles/custom-radio.scss
@@ -1,31 +1,33 @@
-.custom-radio-btn{
-    background-image: url(../assets/images/battle/game-btn.png);
+.custom-radio-btn {
+  background-image: url(../assets/images/battle/game-btn.png);
+  width: 16vw;
+  height: 16vw;
+  background-size: 100% 100%;
+
+  position: relative;
+  filter: grayscale(1);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .radio-img {
+    width: 10vw;
+    position: absolute;
+    left: 3vw;
+    top: 3vw;
+  }
+  span {
+    position: absolute;
+    top: 16vw;
+    font-size: 3vw;
     width: 16vw;
-    height: 16vw;
-    background-size: 100% 100%;
-
-    position: relative;
-
-    .radio-img{
-        width: 10vw;
-        position: absolute;
-        left: 3vw;
-        top: 3vw;
-    
-    }
-    span{
-        position: absolute;
-        top: 15vw;
-        left: 5vw;
-        font-size: 3vw;
-    }
-
-   
-
+  }
 }
-.animate-btn{
-    scale: 1.3;
-    transition: all 1s;
+.animate-btn {
+  scale: 1.3;
+  transition: all 1s;
+  filter: grayscale(0);
 }
 
 /* .custom-radio-btn:hover{
