--- a/src/styles/game-lb-item.scss
+++ b/src/styles/game-lb-item.scss
@@ -92,7 +92,8 @@
     }
   }
   .rightDiv {
-    width: 30vw;
+    min-width: 20vw;
+    padding: 3vw;
     height: 7vw;
     background-color: #0f0c30;
     display: flex;
@@ -101,8 +102,8 @@
     right: 6vw;
     border-radius: 2vw;
     border: 1px solid;
-    justify-content: space-between;
-    padding: 1vw;
+    justify-content: center;
+
 
     img {
       width: 6vw;
@@ -126,7 +127,7 @@
     border: 1px solid;
     justify-content: center;
     padding: 1vw;
-    gap: 1vw;
+    // gap: 1vw;
 
     img {
       width: 5vw;
